# cohere-python

./: .env  .fernignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  4.0.0-5.0.0-migration-guide.md  CHANGELOG.md  CODEOWNERS  FINAL_SUMMARY.md  INTEGRATION_TEST_REPORT.md  LICENSE  MANIFEST.in  MEMORY_OPTIMIZATION_PROPOSAL.md  PROPOSAL_O2_STRUCTURAL_PROMOTION.md  README.md  TESTING_SUMMARY.md  demo_configurable_batch_size.py  mypy.ini  pyproject.toml  readthedocs.yml  reference.md  requirements.txt  sanity-test.py  sdk-usage.py  setup.py  test_embed_stream_comprehensive.py  test_oci_connection_pooling.py  test_oci_embed_stream.py  test_sdk_embed_stream_unit.py  v4-v5-migration-guide.md
.fern/: metadata.json
cohere/: __init__.py  assert_parameters.py  async_client.py  best_choices.py  bulkembed.py  chat.py  classify.py  client.py  client_async.py  cluster.py  custom_model_dataset.py  detectlang.py  detokenize.py  embeddings.py  error.py  extract.py  feedback.py  finetune_client.py  finetune_dataset.py  generate_feedback.py  generation.py  image.py  likelihoods.py  logging.py  moderate.py  rerank.py  response.py  similarities.py  speech.py  summarize.py  tokenize.py  utils.py  whisper.py
cohere.egg-info/: PKG-INFO  SOURCES.txt
docs/: Makefile
examples/: Untitled.ipynb  notebook_demo.ipynb  stream-Copy1.ipynb  stream.ipynb  streaming_demo.ipynb
scripts/: build-sdist.sh  build-wheels.sh  demo_async_client_httpx.py
tests/: embed_job.jsonl  test_aiohttp_autodetect.py  test_async_classify.py  test_async_client.py  test_async_detokenize.py  test_async_embed.py  test_async_generate.py  test_aws_client.py  test_aws_client_unit.py  test_batch.py  test_bedrock_client.py  test_chat.py  test_classify.py  test_classify_format.py  test_client.py  test_client_init.py  test_client_v2.py  test_cluster.py  test_configurable_batch_size.py  test_connection_pooling.py  test_consistency.py  test_custom_model.py  test_detectlang.py  test_detokenize.py  test_embed.py  test_embed_streaming.py  test_embed_streaming_integration.py  test_embed_utils.py  test_extract.py  test_feedback.py  test_finetune_dataset.py  test_generate.py  test_moderate.py  (+14 more)
(+804 files in other folders)
