[tool.poetry]
name = "cohere"
version = "4.54"
description = "Python SDK for the Cohere API"
authors = ["Cohere"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <4.0"
urllib3 = ">=1.26,<3"
requests = "^2.25.0"
aiohttp = "^3.0"
backoff = "^2.0"
importlib_metadata = "^6.0"
fastavro = "^1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
autoflake = "^2.2.1"
Sphinx = "^5.0"
sphinx-rtd-theme = "^1.2.0"

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.isort]
profile = "black"
skip_glob = '^((?!py$).)*$' # python files

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
