[tool.poetry]
name = "cohere"
version = "5.0.0a10"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "cohere", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
typing_extensions = ">= 4.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.5.post1"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
