[tool.poetry]
name = "cohere"
version = "5.4.0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "cohere", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.34.0"
fastavro = "^1.9.4"
httpx = ">=0.21.2"
httpx-sse = "^0.4.0"
pydantic = ">= 1.9.2"
requests = "^2.0.0"
tokenizers = "^0.19"
types-requests = "^2.0.0"
typing_extensions = ">= 4.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
